--- a/visual/src/main/java/org/openbase/bco/dal/visual/service/MotionStateServicePanel.form
+++ b/visual/src/main/java/org/openbase/bco/dal/visual/service/MotionStateServicePanel.form
@@ -22,8 +22,9 @@
                   <Component id="applyMotionStateButton" max="32767" attributes="0"/>
                   <Component id="motionStatePanel" max="32767" attributes="0"/>
                   <Group type="102" alignment="0" attributes="0">
-                      <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="6" max="-2" attributes="0"/>
+                      <Component id="jLabel1" min="-2" pref="99" max="-2" attributes="0"/>
+                      <EmptySpace max="-2" attributes="0"/>
                       <Component id="lastMovementValueLabel" pref="196" max="32767" attributes="0"/>
                   </Group>
               </Group>
@@ -36,7 +37,7 @@
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
               <Component id="motionStatePanel" min="-2" max="-2" attributes="0"/>
-              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="jLabel1" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="lastMovementValueLabel" alignment="3" min="-2" max="-2" attributes="0"/>
