Improve Action Inspector by visualizing action chain in list. Many filter operation added to improve unit selection.

--- a/visual/src/main/resources/org/openbase/bco/dal/visual/action/UnitAllocationPane.fxml
+++ b/visual/src/main/resources/org/openbase/bco/dal/visual/action/UnitAllocationPane.fxml
@@ -8,7 +8,9 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 
-<AnchorPane prefHeight="500.0" prefWidth="1920.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.openbase.bco.dal.visual.action.UnitAllocationPane">
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.control.Label?>
+<AnchorPane prefHeight="500.0" prefWidth="1920.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.openbase.bco.dal.visual.action.UnitAllocationPaneController">
     <children>
       <BorderPane AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <top>
@@ -50,6 +52,42 @@
               </content>
             </ScrollPane>
          </center>
+          <bottom>
+              <VBox maxHeight="200">
+                  <BorderPane.margin>
+                      <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                  </BorderPane.margin>
+                  <padding>
+                      <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                  </padding>
+                  <Label text="Action Chain of Selected Unit"/>
+                  <ScrollPane BorderPane.alignment="BOTTOM_CENTER" fitToHeight="true" fitToWidth="true">
+                      <content>
+                          <TableView fx:id="actionChainTable" editable="true" maxHeight="Infinity" maxWidth="Infinity" tableMenuButtonVisible="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" >
+                              <columns>
+                                  <TableColumn fx:id="actionChainPositionColumn" text="Pos" visible="false" />
+                                  <TableColumn fx:id="actionChainActionStateColumn" maxWidth="500.0" prefWidth="90.0" text="Actionstate" />
+                                  <TableColumn fx:id="actionChainExecutionTimeColumn" maxWidth="1.7976931348623157E308" prefWidth="100.0" text="Executiontime" />
+                                  <TableColumn fx:id="actionChainLastExtensionColumn" maxWidth="1.7976931348623157E308" prefWidth="100.0" text="LastExtension" visible="false" />
+                                  <TableColumn fx:id="actionChainLifetimeColumn" prefWidth="75.0" text="Lifetime" />
+                                  <TableColumn fx:id="actionChainPriorityColumn" maxWidth="300.0" prefWidth="70.0" text="Priority" />
+                                  <TableColumn fx:id="actionChainCategoryColumn" maxWidth="1.7976931348623157E308" prefWidth="100.0" text="Category" />
+                                  <TableColumn fx:id="actionChainInitiatorColumn" maxWidth="1000.0" prefWidth="200.0" text="Initiator" />
+                                  <TableColumn fx:id="actionChainInterruptibleColumn" maxWidth="1000.0" text="Interruptible" visible="false" />
+                                  <TableColumn fx:id="actionChainValidColumn" maxWidth="75.0" text="Valid" visible="true" />
+                                  <TableColumn fx:id="actionChainRunningColumn" maxWidth="75.0" text="Running" visible="true" />
+                                  <TableColumn fx:id="actionChainExpiredColumn" maxWidth="75.0" text="Expired" visible="true" />
+                                  <TableColumn fx:id="actionChainDoneColumn" maxWidth="75.0" text="Done" visible="true" />
+                                  <TableColumn fx:id="actionChainSchedulableColumn" maxWidth="1000.0" text="Schedulable" visible="false" />
+                                  <TableColumn fx:id="actionChainServiceStateColumn" maxWidth="1.7976931348623157E308" prefWidth="500.0" text="Servicestate" />
+                                  <TableColumn fx:id="actionChainTimestampColumn" text="Timestamp" visible="false" />
+                                  <TableColumn fx:id="actionChainActionIdColumn" minWidth="0.0" prefWidth="100.0" text="ID" visible="false" />
+                              </columns>
+                          </TableView>
+                      </content>
+                  </ScrollPane>
+              </VBox>
+          </bottom>
       </BorderPane>
     </children>
 </AnchorPane>
